# nam-android

./: .gitignore  .gitmodules  README.md  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nam_jni.cpp
app/src/main/java/com/rediac/namplayer/: MainActivity.kt  NamEngine.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
